--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,81 +2,127 @@
 
 /*-----------------------------------------------------Colors*/
 
-
-.ui-menu-color-home{
+.ui-menu-color-home {
     background-color: #ff8c00;
 }
 
-.ui-menu-color-music{
+.ui-menu-color-music {
     background-color: #4169e1;
-    
+
 }
-.ui-menu-color-customers{
+
+.ui-menu-color-customers {
     background-color: #ff4500;
 }
 
-.ui-menu-color-contact{
+.ui-menu-color-contact {
     background-color: #696969;
 }
 
 .bg-color-band-info {
-    background-color: 
-  #f8f8ff;
+    background-color: #f7f6ea;
+
 }
 
 .bg-color-video {
-    background-color: #ffffff;
+    background-color: #f8f8ff;
 }
 
-#strong-color{
-    color:  #ff8c00;
+#strong-color {
+    color: #ff8c00;
 }
+
 /*-----------------------------------------------------Miscellaneous/Styles/Values/Bovinators*/
 
-h1,h2,h3,h4,h5,h6,h7{
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+h7 {
     margin: 0;
 }
 
-.uppercase{
- text-transform: uppercase;    
+.uppercase {
+    text-transform: uppercase;
 }
 
-.general-styles{
-    font-family: "Roboto Slab",sans-serif;
-    font-weight:400;
+.general-styles {
+    font-family: "Roboto Slab", sans-serif;
+    font-weight: 400;
     color: #f0ffff;
     padding-top: 18px;
     padding-bottom: 8px;
 }
 
-.band-info-item p{
+.band-info-item p {
     font-family: "Mukta Malar", sans-serif;
     font-weight: 300;
     font-size: 16px;
 }
 
-.inline-block{
+.inline-block {
     display: inline-block;
 }
 
-.section-heading{
+.section-heading-band-info {
     font-family: "Roboto Slab", sans-serif;
     font-size: 20px;
     font-weight: 500;
     margin-top: 25px;
-    margin-bottom: 50px;
+    margin-bottom: 40px;
 }
 
-.video-container{
-    clear: both;
+.section-heading-video {
+    font-family: "Roboto Slab", sans-serif;
+    font-size: 17px;
+    font-weight: 500;
+    margin-top: 25px;
+    margin-bottom: 40px;
 }
 
+
+.wiki-link{
+    color: #ff8c00;
+    text-decoration: underline;
+}
+
+/*-----------------------------------------------------Video-styles*/
+
+.video-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 30px;
+    height: 0;
+    overflow: hidden;
+}
+
+.video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.video-style {
+    margin-top: 10px;
+    margin-bottom: 15px;
+}
+
+.video-border {
+	margin: 0 auto;
+	border: 8px outset #000000;	
+}
 
 /*-----------------------------------------------------Headings*/
-header{
+
+header {
     margin: 0;
 }
-.logo{
+
+.logo {
     background: url("../images/a-logo-b-yellow.jpeg");
     background-position: center;
     background-size: cover;
@@ -87,52 +133,52 @@ header{
     -webkit-transition: all .5s ease-out;
 }
 
-.picture{
+.picture {
     background: url("../images/a-long-bw-yellow.jpg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
     min-height: 372px;
-    position:relative;
-    
+    position: relative;
+
 }
 
-#navbar{
-    position:absolute;
-    bottom:0;
+#navbar {
+    position: absolute;
+    bottom: 0;
     width: 100%;
 }
 
-#nav-list{
+#nav-list {
     margin: 0;
-    
+
 }
 
-#nav-list li{
+#nav-list li {
     padding: 0;
 }
 
-.menuitem{
-   height: 62px;
-   text-align: center;
-   padding:0;
+.menuitem {
+    height: 62px;
+    text-align: center;
+    padding: 0;
 }
 
-.menuitem a{
+.menuitem a {
     width: 100%;
     height: 62px;
     color: #ffffff;
     text-decoration: none;
 }
 
-.menuitem a i{
+.menuitem a i {
     padding-top: 13px;
     font-size: 14px;
     color: #f0ffff;
     display: block;
 }
 
-.menuitem span{
+.menuitem span {
     width: 100%;
     padding-top: 3px;
     font-size: 12px;
@@ -144,49 +190,65 @@ header{
 
 /*-----------------------------------------------------Hover*/
 
-.hvr-rectangle-out{
-  background: none;
+.hvr-rectangle-out {
+    background: none;
 }
 
 .hvr-rectangle-out:before {
-  background: rgba(0,0,0, 0.2);
+    background: rgba(0, 0, 0, 0.2);
 }
 
-.social-links li a i:hover{
-    background:#4169e1;
+.social-links li a i:hover {
+    background: #4169e1;
 }
-
+.wiki-link:hover {
+    color: #4169e1;
+    text-decoration: none;
+    transition: all 1s ease-out;
+    -moz-transition: all 1s ease-out;
+    -webkit-transition: all 1s ease-out;
+    -o-transition: all 1s ease-out;
+}
 /*-----------------------------------------------------Footer*/
 
-footer{
+footer {
     background-color: #696969;
     color: #f0ffff;
     margin: 0;
     min-height: 93px;
 }
 
-footer .font-style{
+footer .font-style {
     font-family: "Mukta Malar", sans-serif;
     font-size: 14px;
     font-weight: 200;
 }
 
-footer .list-pdf i{
-    color:#f0ffff;
+footer .list-pdf i {
+    color: #f0ffff;
     font-size: 12px;
     padding-left: 4px;
-   text-align: center; 
+    text-align: center;
 }
- 
-footer .list-pdf i:hover{
-    color: 	#4169e1;
+
+
+
+footer .list-pdf i:hover {
+    color: #4169e1;
     transition: all 1s ease-out;
     -moz-transition: all 1s ease-out;
     -webkit-transition: all 1s ease-out;
     -o-transition: all 1s ease-out;
 }
 
-.social-links{
+#footer-margin {
+    margin: 5px 8px 0px 8px;
+}
+
+/*-----------------------------------------------------Social Links*/
+
+.social-links {
+    padding-top: 0;
     padding-bottom: 12px;
 }
 
@@ -200,34 +262,23 @@ footer .list-pdf i:hover{
     text-align: center;
     line-height: 12px;
     color: #f0ffff;
-    background-color: #736b6b;;
-     transition: all 1s ease-out;
+    background-color: #736b6b;
+    transition: all 1s ease-out;
     -moz-transition: all 1s ease-out;
     -webkit-transition: all 1s ease-out;
     -o-transition: all 1s ease-out;
-    
+
 }
 
-#footer-margin {
-    margin: 5px 8px 0px 8px;
-}
+
 
 /*-----------------------------------------------------Media Queries*/
 
 @media(min-width: 992px) {
-    .section-column{
-    padding:0 30px 30px;
-    float:none;
-    display: table-cell;
+    .section-column {
+        padding: 0 15px 10px;
+        float: none;
+        display: table-cell;
+    }
 }
-}
-
-
-
- /*---  <iframe width="374" height="210" src="https://www.youtube.com/embed/MgTSfJEf_jM?rel=0" 
-                                    frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> ---*/
-                                    
-                                    
-                                    ?
-       /* <iframe width="374" height="210" src="https://www.youtube.com/embed/HHjKzr6tLz0?rel=0&amp;start=20" 
-        frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>*/
+*/
