--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,6 +88,11 @@ h7 {
     text-decoration: underline;
 }
 
+#social{
+    padding-bottom: 0;
+        
+}
+
 /*-----------------------------------------------------Video-styles*/
 
 .video-container {
@@ -116,6 +121,10 @@ h7 {
 	border: 8px outset #000000;	
 }
 
+ iframe {  
+  animation: 1s ease-in-out 0s 1 slideInFromLeft;
+}
+
 /*-----------------------------------------------------Headings*/
 
 header {
@@ -123,7 +132,7 @@ header {
 }
 
 .logo {
-    background: url("../images/a-logo-b-yellow.jpeg");
+    background: url("../images/a-logo-crop.jpg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -134,7 +143,7 @@ header {
 }
 
 .picture {
-    background: url("../images/a-long-bw-yellow.jpg");
+    background: url("../images/a-hero-image.jpg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -159,20 +168,20 @@ header {
 }
 
 .menuitem {
-    height: 62px;
+    height: 86px;
     text-align: center;
     padding: 0;
 }
 
 .menuitem a {
     width: 100%;
-    height: 62px;
+    height: 86px;
     color: #ffffff;
     text-decoration: none;
 }
 
 .menuitem a i {
-    padding-top: 13px;
+    padding-top: 22px;
     font-size: 14px;
     color: #f0ffff;
     display: block;
@@ -222,6 +231,7 @@ footer .font-style {
     font-family: "Mukta Malar", sans-serif;
     font-size: 14px;
     font-weight: 200;
+    padding-top: 5px;
 }
 
 footer .list-pdf i {
@@ -249,7 +259,7 @@ footer .list-pdf i:hover {
 
 .social-links {
     padding-top: 0;
-    padding-bottom: 12px;
+    padding-bottom: 6px;
 }
 
 
@@ -281,4 +291,17 @@ footer .list-pdf i:hover {
         display: table-cell;
     }
 }
-*/
+
+/*------------------------------------------------------Keyframes*/
+
+
+
+
+@keyframes slideInFromLeft {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
