--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,6 +125,9 @@ h7 {
   animation: 1s ease-in-out 0s 1 slideInFromLeft;
 }
 
+#video-padding{
+    padding-bottom: 16px;
+}
 /*-----------------------------------------------------Headings*/
 
 header {
@@ -182,7 +185,7 @@ header {
 
 .menuitem a i {
     padding-top: 22px;
-    font-size: 14px;
+    font-size: 18px;
     color: #f0ffff;
     display: block;
 }
@@ -190,7 +193,7 @@ header {
 .menuitem span {
     width: 100%;
     padding-top: 3px;
-    font-size: 12px;
+    font-size: 14px;
     font-weight: 500;
     letter-spacing: 1px;
     text-transform: uppercase;
