--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,12 +7,12 @@
 }
 
 .ui-menu-color-music {
-    background-color: #4169e1;
+    background-color: #2061a5;
 
 }
 
 .ui-menu-color-customers {
-    background-color: #ff4500;
+    background-color: #a4142d;
 }
 
 .ui-menu-color-contact {
@@ -24,9 +24,19 @@
 
 }
 
+.bg-color-music-info{
+    background-color: #e6e6fa;
+}
+
 .bg-color-video {
     background-color: #f8f8ff;
 }
+
+.bg-color-music {
+    background-color: #a4142d;
+}
+
+
 
 #strong-color {
     color: #ff8c00;
@@ -66,6 +76,14 @@ h7 {
     display: inline-block;
 }
 
+.section-heading-music-info {
+    font-family: "Roboto Slab", sans-serif;
+    font-size: 20px;
+    font-weight: 500;
+    margin-top: 25px;
+    margin-bottom: 40px;
+}
+
 .section-heading-band-info {
     font-family: "Roboto Slab", sans-serif;
     font-size: 20px;
@@ -75,6 +93,14 @@ h7 {
 }
 
 .section-heading-video {
+    font-family: "Roboto Slab", sans-serif;
+    font-size: 17px;
+    font-weight: 500;
+    margin-top: 25px;
+    margin-bottom: 40px;
+}
+
+.section-heading-music {
     font-family: "Roboto Slab", sans-serif;
     font-size: 17px;
     font-weight: 500;
@@ -128,6 +154,24 @@ h7 {
 #video-padding{
     padding-bottom: 16px;
 }
+
+
+
+figure {
+    display: inline-block;
+    margin: 10px; 
+}
+
+figure .image-style {
+    vertical-align: top;
+    width: 150px;
+    height: 150px;
+}
+
+figure .audio-bar {
+    text-align: center;
+    width: 150px; 
+}
 /*-----------------------------------------------------Headings*/
 
 header {
@@ -139,46 +183,74 @@ header {
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    min-height: 372px;
+    min-height: 360px;
     transition: all .5s ease-out;
     -moz-transition: all .5s ease-out;
     -webkit-transition: all .5s ease-out;
 }
 
-.picture {
+
+
+.picture-main {
     background: url("../images/a-hero-image.jpg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    min-height: 372px;
+    min-height: 360px;
     position: relative;
 
 }
+
+.picture-music {
+    background: url("../images/animals-bw-tall.jpg");
+   background-position: center;
+    background-size: contain;
+    background-repeat: repeat;
+    position: relative;
+    min-height: 360px;
+   
+}
+/*
+.background-music {
+    background: url("../images/a-small.jpg");
+   background-position: center;
+    background-size: contain;
+    background-repeat: repeat;
+    position: relative;
+    min-height: 360px;
+   
+}
+*/
 
 #navbar {
     position: absolute;
     bottom: 0;
     width: 100%;
+   
 }
 
 #nav-list {
     margin: 0;
+    
 
 }
 
 #nav-list li {
     padding: 0;
+    border-style: solid;
+    border-width: 4px 2px;
+    border-color: #000000;
 }
 
 .menuitem {
-    height: 86px;
+    height: 90px;
     text-align: center;
     padding: 0;
 }
 
 .menuitem a {
     width: 100%;
-    height: 86px;
+    height: 90px;
     color: #ffffff;
     text-decoration: none;
 }
