--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,6 +43,10 @@ background-color: #2061a5;
     color: #ff8c00;
 }
 
+#strong-color-free{
+  color:  #ff4500;
+}
+
 /*-----------------------------------------------------Miscellaneous/Styles/Values/Bovinators*/
 
 h1,
@@ -82,6 +86,13 @@ h7 {
 
 .inline-block {
     display: inline-block;
+}
+
+.list-inline li {
+    display: inline-block;
+    padding: 0px;
+   
+    
 }
 
 .section-heading-music-info {
@@ -239,12 +250,13 @@ header {
 
 #nav-list {
     margin: 0;
+    padding: 0;
     
 }
 
 #border-home {
     border-style: solid;
-    border-width: 4px 4px 4px 4;
+    border-width: 4px 4px 4px 4px;
     border-color: #000000;
 }
 
@@ -301,7 +313,8 @@ header {
 
 .hvr-rectangle-out {
     background: none;
-    width: 100%;
+  
+  
    
 }
 
@@ -311,7 +324,8 @@ header {
 
 .hvr-rectangle-out:before {
     background: rgba(0, 0, 0, 0.2);
-     width: 100%;
+    background-size:cover;
+    
   
 }
 
@@ -403,7 +417,7 @@ footer .list-pdf i:hover {
     }
 }
 
-@media(max-width: 771px){
+@media(max-width: 500px){
     #border-home{
     border-style: solid;
     border-width: 4px 4px 4px 4px;
