--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,7 +33,7 @@
 }
 
 .bg-color-contact-info {
-    background-color: #000000;
+    background-color: #ffffff;
 }
 
 .bg-color-home {
@@ -119,11 +119,9 @@ h7 {
 }
 
 .picture-contact-info {
-    background: url("../images/celebration-one.jpeg");
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    min-height: 400px;
+   width: 100%;
+   height: 380px;
+   margin-top: 15px;
 }
 
 .inline-block {
@@ -158,6 +156,14 @@ h7 {
 }
 
 .section-heading-customers-info {
+    font-family: "Roboto Slab", sans-serif;
+    font-size: 20px;
+    font-weight: 500;
+    margin-top: 25px;
+    margin-bottom: 40px;
+}
+
+.section-heading-contact-info {
     font-family: "Roboto Slab", sans-serif;
     font-size: 20px;
     font-weight: 500;
@@ -309,6 +315,16 @@ header {
 
 }
 
+.picture-contact {
+    background: url("../images/a-hero-image.jpg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    min-height: 360px;
+    position: relative;
+
+}
+
 /*-----------------------------------------------------Navigation Styles*/
 
 #navbar {
@@ -385,6 +401,35 @@ header {
 
 
 
+}
+
+/*--------------------------------------------------------Contact*/
+
+.contact-heading {
+    font-family: "Roboto Slab", sans-serif;
+    font-weight: 500;
+    margin-top: 25px;
+    margin-bottom: 20px;
+}
+
+
+.center-form {
+    padding-top: 5px;
+    margin: 0 auto;
+    max-width: 70%;
+}
+
+.form-control{
+    font-family: "Mukta Malar", sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+}
+
+button[type="submit"] {
+    margin-top: 15px;
+    margin-bottom: 15px;
+    background-color: #a4142d;
+    color: #f0ffff;
 }
 
 /*-----------------------------------------------------Hover*/
@@ -520,15 +565,6 @@ footer .list-pdf i:hover {
     }
 }
 
-
-@media(max-width: 992px) {
-    #border-home {
-        border-style: solid;
-        border-width: 4px 4px 4px 4px;
-        border-color: #000000;
-    }
-}
-
 @media(max-width: 767px) {
     #border-home {
         border-style: solid;
@@ -553,8 +589,18 @@ footer .list-pdf i:hover {
 
 }
 
-
-
+@media (min-width: 768px) and (max-width: 1024px) {
+ #border-home {
+        border-style: solid;
+        border-width: 4px 4px 4px 0px;
+        border-color: #000000;
+    }
+#border-contact {
+        border-style: solid;
+        border-width: 4px 0px 4px 0px;
+        border-color: #000000;
+    }
+}
 
 
 @media(max-width: 767px) {
@@ -566,7 +612,6 @@ footer .list-pdf i:hover {
 @media(max-width: 411px) {
     #padding-left-none {
         padding-left: 0;
-        /* WTF? */
     }
 }
 
@@ -619,18 +664,6 @@ footer .list-pdf i:hover {
     }
 }
 
-@media(max-width: 767px) {
-    .logo {
-        background: url("../images/a-logo-cropped.jpg");
-        background-position: center;
-        background-size: cover;
-        background-repeat: no-repeat;
-        min-height: 300px;
-        transition: all .5s ease-out;
-        -moz-transition: all .5s ease-out;
-        -webkit-transition: all .5s ease-out;
-    }
-}
 
 
 /*------------------------------------------------------Keyframes*/
@@ -647,25 +680,4 @@ footer .list-pdf i:hover {
 
 
 
-/*--------------------------------------------------------Contact*/
 
-.contact-heading {
-    font-family: "Roboto Slab", sans-serif;
-    font-weight: 500;
-    margin-top: 25px;
-    margin-bottom: 20px;
-}
-
-
-.center-form {
-    padding-top: 10px;
-    margin: 0 auto;
-    max-width: 70%;
-}
-
-button[type="submit"] {
-    margin-top: 15px;
-    margin-bottom: 20px;
-    background-color: #e84610;
-    color: #fafafa;
-}
