--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,19 +19,9 @@
     background-color: #696969;
 }
 
-.bg-color-band-info {
-    background-color: #ffffff;
-
-}
-
-.bg-color-music-info {
-    background-color: #ffffff;
-}
-
-.bg-color-customers-info {
-    background-color: #ffffff;
-}
-
+.bg-color-band-info,
+.bg-color-music-info,
+.bg-color-customers-info,
 .bg-color-contact-info {
     background-color: #ffffff;
 }
@@ -87,20 +77,9 @@ h7 {
 }
 
 
-.band-info-item {
-    font-family: "Mukta Malar", sans-serif;
-    font-weight: 400;
-    font-size: 18px;
-}
-
-.band-music-item p {
-
-    font-family: "Mukta Malar", sans-serif;
-    font-weight: 400;
-    font-size: 18px;
-}
-
-.band-customers-item p {
+.band-info-item,
+.band-music-item,
+.band-customers-item {
     font-family: "Mukta Malar", sans-serif;
     font-weight: 400;
     font-size: 18px;
@@ -119,9 +98,9 @@ h7 {
 }
 
 .picture-contact-info {
-   width: 100%;
-   height: 380px;
-   margin-top: 15px;
+    width: 100%;
+    height: 380px;
+    margin-top: 15px;
 }
 
 .inline-block {
@@ -139,22 +118,8 @@ h7 {
 
 /*-----------------------------------------------------Section Headings*/
 
-.section-heading-music-info {
-    font-family: "Roboto Slab", sans-serif;
-    font-size: 20px;
-    font-weight: 500;
-    margin-top: 25px;
-    margin-bottom: 40px;
-}
-
-.section-heading-band-info {
-    font-family: "Roboto Slab", sans-serif;
-    font-size: 20px;
-    font-weight: 500;
-    margin-top: 25px;
-    margin-bottom: 40px;
-}
-
+.section-heading-music-info,
+.section-heading-band-info,
 .section-heading-customers-info {
     font-family: "Roboto Slab", sans-serif;
     font-size: 20px;
@@ -163,28 +128,12 @@ h7 {
     margin-bottom: 40px;
 }
 
-.section-heading-contact-info {
-    font-family: "Roboto Slab", sans-serif;
-    font-size: 20px;
-    font-weight: 500;
-    margin-top: 25px;
-    margin-bottom: 40px;
-}
 
-.section-heading-home {
-    font-family: "Roboto Slab", sans-serif;
-    font-size: 20px;
-    font-weight: 500;
-    margin-top: 25px;
-    margin-bottom: 40px;
-    color: #f0ffff;
-}
-
+.section-heading-home,
 .section-heading-music {
     font-family: "Roboto Slab", sans-serif;
     font-size: 20px;
     font-weight: 500;
-    float: left;
     margin-top: 25px;
     margin-bottom: 40px;
     color: #f0ffff;
@@ -204,7 +153,7 @@ h7 {
     font-size: 20px;
     font-weight: 500;
     margin-top: 25px;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
     color: #000000;
 }
 
@@ -278,14 +227,15 @@ header {
     background-size: cover;
     background-repeat: no-repeat;
     min-height: 360px;
-    transition: all .5s ease-out;
-    -moz-transition: all .5s ease-out;
-    -webkit-transition: all .5s ease-out;
+    transition: all 1s ease-in-out;
+    -moz-transition: all 1s ease-in-out;
+    -webkit-transition: all 1s ease-in-out;
 }
 
 
 
-.picture-main {
+.picture-main,
+.picture-contact {
     background: url("../images/a-hero-image.jpg");
     background-position: center;
     background-size: cover;
@@ -315,15 +265,6 @@ header {
 
 }
 
-.picture-contact {
-    background: url("../images/a-hero-image.jpg");
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    min-height: 360px;
-    position: relative;
-
-}
 
 /*-----------------------------------------------------Navigation Styles*/
 
@@ -405,24 +346,17 @@ header {
 
 /*--------------------------------------------------------Contact*/
 
-.contact-heading {
-    font-family: "Roboto Slab", sans-serif;
-    font-weight: 500;
-    margin-top: 25px;
-    margin-bottom: 20px;
-}
-
-
 .center-form {
     padding-top: 5px;
     margin: 0 auto;
-    max-width: 70%;
+    max-width: 75%;
 }
 
-.form-control{
+.form-control {
     font-family: "Mukta Malar", sans-serif;
     font-weight: 400;
     font-size: 18px;
+    margin-top: 20px;
 }
 
 button[type="submit"] {
@@ -590,12 +524,12 @@ footer .list-pdf i:hover {
 }
 
 @media (min-width: 768px) and (max-width: 1024px) {
- #border-home {
+    #border-home {
         border-style: solid;
         border-width: 4px 4px 4px 0px;
         border-color: #000000;
     }
-#border-contact {
+    #border-contact {
         border-style: solid;
         border-width: 4px 0px 4px 0px;
         border-color: #000000;
@@ -603,7 +537,7 @@ footer .list-pdf i:hover {
 }
 
 
-@media(max-width: 767px) {
+@media(max-width: 375px) {
     .section-heading-music {
         text-align: center;
     }
@@ -676,8 +610,3 @@ footer .list-pdf i:hover {
         transform: translateX(0);
     }
 }
-
-
-
-
-
